--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -10,6 +10,8 @@
 	<h1>Species map</h1>
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/underscore-min.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/backbone-min.js"></script>{% endaddtoblock %}
+
+	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}js/backbone-tastypie.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/ants_atlas.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}
 		<script type="text/javascript">
