Advances in Js/Backbone code.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -13,6 +13,9 @@
 			<input type="submit" value="search" />
 		</form>
 
+		<div id="search_list">
+		</div>
+
 		<div id="search_list"></div>
 	</div>
 
@@ -28,6 +31,6 @@
 		window._formidabel.atlas.bootstrap($('#ants_atlas'));
 	});
 	</script>
-	
+
 	{% endaddtoblock %}
 {% endblock %}	
