--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -16,7 +16,7 @@
 		<div id="search_list">
 		</div>
 
-		<div id="search_list"></div>
+		 <div style="width: 800px; height: 600px;" id="map"></div>
 	</div>
 
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/underscore-min.js"></script>{% endaddtoblock %}
@@ -26,9 +26,28 @@
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/ants_atlas.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}
 
+	{% addtoblock "css" %}
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
+	{% endaddtoblock %}
+
+	{% addtoblock "js" %}
+		<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+	{% endaddtoblock %}
+
 	<script type="text/javascript">
 	$(function(){
-		window._formidabel.atlas.bootstrap($('#ants_atlas'));
+
+		window._formidabel.atlas.bootstrap($('#ants_atlas'), {
+			// TODO: Move to settings.py
+			cloudmade_api_key:"16534950d4b44d358c7963355dc57dc6",
+			cloudmade_style_id: 1930,
+			initial_location: [50.8333, 4],
+			initial_zoom: 8,
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+			max_zoom: 18
+		});
+		
 	});
 	</script>
 
