--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -37,8 +37,11 @@
 
 	<script type="text/javascript">
 	$(function(){
+		var app_options = {
+			'squares_source_url': '{{ STATIC_URL }}ants_atlas/js/utm5.json'
+		};
 
-		window._formidabel.atlas.bootstrap($('#ants_atlas'), {
+		var map_options = {
 			// TODO: Move to settings.py
 			cloudmade_api_key:"16534950d4b44d358c7963355dc57dc6",
 			cloudmade_style_id: 1930,
@@ -46,7 +49,9 @@
 			initial_zoom: 8,
 			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
 			max_zoom: 18
-		});
+		};
+
+		window._formidabel.atlas.bootstrap($('#ants_atlas'), map_options, app_options);
 		
 	});
 	</script>
