Fixed a small removal bug / Better view structure.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -10,6 +10,7 @@
 
 		<form id="search">
 			<input type="text" name="species_id" id="species_id" />
+			<input type="text" name="color_code" id="color_code" />
 			<input type="submit" value="search" />
 		</form>
 
