--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -8,22 +8,29 @@
 	<div id="ants_atlas">
 		<h1>Species map</h1>
 
-		<form id="search">
+		<form id="search" class="form-inline">
+			<label for="species_id">Species: </label>
 			<input type="text" name="species_id" id="species_id" />
-			<input type="text" name="color_code" id="color_code" />
+
+			<label for="color_code">Color: </label>
+			<input type="text" name="color_code" id="color_code" class="colorpicker input-mini"/>
 			<input type="submit" value="search" />
 		</form>
 
 		<div id="search_list">
+			<h1>Layers<h1>
 		</div>
 
-		 <div style="width: 800px; height: 600px;" id="map"></div>
+		<div id="map"></div>
 	</div>
 
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/underscore-min.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/backbone-min.js"></script>{% endaddtoblock %}
 
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}js/backbone-tastypie.js"></script>{% endaddtoblock %}
+
+	{# Use version https://github.com/xaguilars/bootstrap-colorpicker because the original one has issues and is not mainained anymore. #}
+	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/bootstrap-colorpicker.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/ants_atlas.js"></script>{% endaddtoblock %}
 	{% addtoblock "js" %}
 
@@ -32,12 +39,22 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
 	{% endaddtoblock %}
 
+	{% addtoblock "css" %}
+		<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/bootstrap-colorpicker.css" />
+	{% endaddtoblock %}
+
+	{% addtoblock "css" %}
+		<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/ants_atlas.css" />
+	{% endaddtoblock %}
+
 	{% addtoblock "js" %}
 		<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 	{% endaddtoblock %}
 
 	<script type="text/javascript">
 	$(function(){
+		$('.colorpicker').colorpicker()
+
 		var app_options = {
 			'squares_source_url': '{{ STATIC_URL }}ants_atlas/js/utm5.json'
 		};
