--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -78,9 +78,16 @@
 		};
 
 		var map_options = {
+			overlays_colors_presets: [
+				'#597d1e',
+				'#d62f2f',
+				'#2f86d6',
+				'#b85c1a'
+			],
+
 			// TODO: Move to settings.py
 			cloudmade_api_key:"16534950d4b44d358c7963355dc57dc6",
-			cloudmade_style_id: 1930,
+			cloudmade_style_id: 998, //1930,
 			initial_location: [50.6, 4.3],
 			initial_zoom: 8,
 			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
