Color presets (to be improved).

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -78,7 +78,7 @@
 		};
 
 		var map_options = {
-			overlays_colors_presets: [
+			overlay_color_presets: [
 				'#597d1e',
 				'#d62f2f',
 				'#2f86d6',
