Small URLs update/fix (hopefully).

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -7,6 +7,7 @@
 
 	<div id="ants_atlas">
 		<h1>Species map</h1>
+		{# <h2>{% url resource_name="species" api_name="v1" %}</h2> #}
 
 		<form id="search" class="form-inline">
 			<label for="species_id">Species: </label>
