Minor visual edits.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -6,7 +6,7 @@
 {% placeholder base_content %}
 
 <div id="ants_atlas">
-	<h1>Species map</h1>
+	<h1>Atlas</h1>
 	
 	<div class="well">
 		<form id="search" class="form-inline">
@@ -30,7 +30,7 @@
 
 	<div class="row">
 		<div class="span2" id="search_list">
-			<h1>Layers<h1>
+			<h2>Layers<h2>
 			</div>
 
 			<div class="span10" id="map"></div>
