Before/after date filters working, with minimal UI.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -24,6 +24,13 @@
 
 			<label for="color_code">Color: </label>
 			<input type="text" name="color_code" id="color_code" class="colorpicker input-mini"/>
+
+			<label for="min_date">After: </label>
+			<input type="date" name="min_date" id="min_date" />
+
+			<label for="max_date">Before: </label>
+			<input type="date" name="max_date" id="max_date" />
+
 			<button type="submit" class="btn btn-success" /><i class="icon-search icon-white"></i> Search</button>
 		</form>
 	</div>
