--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -9,29 +9,37 @@
 	<h1>Atlas</h1>
 	
 	<div class="well">
-		<form id="search" class="form-inline">
-			<label for="species_id">Species: </label>
+		<form id="search" class="form-horizontal">
+			<div class="control-group">
+				<label class="control-label" for="species_id">Species: </label>
+				<div class="controls">
+					<select id="species_id">
+						{% for g in genus %}
+						<optgroup label="{{ g.name }}">
+							{% for s in g.species_set.all %}
+							<option value="{{ s.pk }}">{{ s.scientificname }}</option>
+							{% endfor %}
+						</optgroup>
+						{% endfor %}
+					</select>
 
-			<select id="species_id">
-				{% for g in genus %}
-				<optgroup label="{{ g.name }}">
-					{% for s in g.species_set.all %}
-					<option value="{{ s.pk }}">{{ s.scientificname }}</option>
-					{% endfor %}
-				</optgroup>
-				{% endfor %}
-			</select>
+					<input type="text" name="color_code" id="color_code" class="colorpicker input-mini"/>
+				</div>
+			</div>
 
-			<label for="color_code">Color: </label>
-			<input type="text" name="color_code" id="color_code" class="colorpicker input-mini"/>
+			<div class="control-group">
+				<label class="control-label" for="min_date">After: </label>
+				<div class="controls"><input type="date" name="min_date" id="min_date" /></div>
+			</div>
 
-			<label for="min_date">After: </label>
-			<input type="date" name="min_date" id="min_date" />
+			<div class="control-group">
+				<label class="control-label" for="max_date">Before: </label>
+				<div class="controls"><input type="date" name="max_date" id="max_date" /></div>
+			</div>
 
-			<label for="max_date">Before: </label>
-			<input type="date" name="max_date" id="max_date" />
-
-			<button type="submit" class="btn btn-success" /><i class="icon-search icon-white"></i> Search</button>
+			<div class="control-group">
+				<div class="controls"><button type="submit" class="btn btn-success" /><i class="icon-search icon-white"></i> Search</button></div>
+			</div>
 		</form>
 	</div>
 
@@ -45,79 +53,79 @@
 		<div class="span9" id="map"></div>
 	</div>
 
-		{# Templates #}
-		<script type="text/html" id="layerListEntry">
+	{# Templates #}
+	<script type="text/html" id="layerListEntry">
 			// TR added by view
 			<td><span class="badge badge-info"><%= occurrences_count %></span></td>
 			<td><%= species_name %></td>
 			<td><i class="icon-trash remove"></i></td>
-		</script>
+			</script>
 
-		<script type="text/html" id="mapPopupContent">
+			<script type="text/html" id="mapPopupContent">
 			<div>
-				<h3><%= square_id %></h3> 
-				<%= occ_counter %> occurrence(s) for <%= species_name %>.
+			<h3><%= square_id %></h3> 
+			<%= occ_counter %> occurrence(s) for <%= species_name %>.
 			</div>
-		</script>
+			</script>
 
-	</div>
+		</div>
 
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/underscore-min.js"></script>{% endaddtoblock %}
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/backbone-min.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/underscore-min.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/backbone-min.js"></script>{% endaddtoblock %}
 
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}js/backbone-tastypie.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}js/backbone-tastypie.js"></script>{% endaddtoblock %}
 
-	{# Use version https://github.com/xaguilars/bootstrap-colorpicker because the original one has issues and is not mainained anymore. #}
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/bootstrap-colorpicker.js"></script>{% endaddtoblock %}
+		{# Use version https://github.com/xaguilars/bootstrap-colorpicker because the original one has issues and is not mainained anymore. #}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/bootstrap-colorpicker.js"></script>{% endaddtoblock %}
 
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/ants_atlas.js"></script>{% endaddtoblock %}
-	{% addtoblock "js" %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/ants_atlas.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}
 
-	{% addtoblock "css" %}
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
-	{% endaddtoblock %}
+		{% addtoblock "css" %}
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" /><![endif]-->
+		{% endaddtoblock %}
 
-	{% addtoblock "css" %}
-	<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/bootstrap-colorpicker.css" />
-	{% endaddtoblock %}
+		{% addtoblock "css" %}
+		<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/bootstrap-colorpicker.css" />
+		{% endaddtoblock %}
 
-	{% addtoblock "css" %}
-	<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/ants_atlas.css" />
-	{% endaddtoblock %}
+		{% addtoblock "css" %}
+		<link rel="stylesheet" href="{{ STATIC_URL }}ants_atlas/css/ants_atlas.css" />
+		{% endaddtoblock %}
 
-	{% addtoblock "js" %}
-	<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
-	{% endaddtoblock %}
+		{% addtoblock "js" %}
+		<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+		{% endaddtoblock %}
 
-	{% addtoblock "js" %}
-	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
-	{% endaddtoblock %}	
+		{% addtoblock "js" %}
+		<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+		{% endaddtoblock %}	
 
-	{% addtoblock "js" %}
-	<script src="{{ STATIC_URL }}ants_atlas/js/leaflet-plugins/Google.js"></script>
-	{% endaddtoblock %}
+		{% addtoblock "js" %}
+		<script src="{{ STATIC_URL }}ants_atlas/js/leaflet-plugins/Google.js"></script>
+		{% endaddtoblock %}
 
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/spin.min.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/spin.min.js"></script>{% endaddtoblock %}
 
-	{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/leaflet.spin.js"></script>{% endaddtoblock %}
+		{% addtoblock "js" %}<script type="text/javascript" src="{{ STATIC_URL }}ants_atlas/js/leaflet.spin.js"></script>{% endaddtoblock %}
 
-	<script type="text/javascript">
-	$(function(){
-		$('.colorpicker').colorpicker()
+		<script type="text/javascript">
+		$(function(){
+			$('.colorpicker').colorpicker()
 
-		var app_options = {
-			'squares_source_url': '{{ STATIC_URL }}ants_atlas/js/utm5.json',
-			'species_api_url'	: '{% url api_dispatch_list resource_name="species" api_name="v1" %}' /* /api/v1/species/ */
-		};
+			var app_options = {
+				'squares_source_url': '{{ STATIC_URL }}ants_atlas/js/utm5.json',
+				'species_api_url'	: '{% url api_dispatch_list resource_name="species" api_name="v1" %}' /* /api/v1/species/ */
+			};
 
-		var map_options = {
-			overlay_color_presets: [
-			'#597d1e',
-			'#d62f2f',
-			'#2f86d6',
-			'#b85c1a'
-			],
+			var map_options = {
+				overlay_color_presets: [
+				'#597d1e',
+				'#d62f2f',
+				'#2f86d6',
+				'#b85c1a'
+				],
 
 			// TODO: Move to settings.py
 			cloudmade_api_key:"16534950d4b44d358c7963355dc57dc6",
@@ -131,7 +139,7 @@
 		window._formidabel.atlas.bootstrap($('#ants_atlas'), map_options, app_options);
 		
 	});
-	</script>
+		</script>
 
-	{% endaddtoblock %}
-	{% endblock %}	
+		{% endaddtoblock %}
+		{% endblock %}	
