Small UI improvements.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -34,12 +34,12 @@
 			<div style="display: none;" id="date_filters">
 				<div class="control-group">
 					<label class="control-label" for="min_date">After: </label>
-					<div class="controls"><input type="date" name="min_date" id="min_date" /></div>
+					<div class="controls"><input class="input-small" type="date" name="min_date" id="min_date" /></div>
 				</div>
 
 				<div class="control-group">
 					<label class="control-label" for="max_date">Before: </label>
-					<div class="controls"><input type="date" name="max_date" id="max_date" /></div>
+					<div class="controls"><input class="input-small" type="date" name="max_date" id="max_date" /></div>
 				</div>
 			</div>
 
