--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -155,31 +155,45 @@
 			});
 
 			var app_options = {
-				'squares_source_url': '{{ STATIC_URL }}ants_atlas/js/utm5.json',
-				'species_api_url'	: '{% url api_dispatch_list resource_name="species" api_name="v1" %}' /* /api/v1/species/ */
+				dom: {
+					main_container: $('#ants_atlas')
+				},
+
+				squares_source_url: '{{ STATIC_URL }}ants_atlas/js/utm5.json',
+				species_api_url: '{% url api_dispatch_list resource_name="species" api_name="v1" %}', /* /api/v1/species/ */
+
+				'map_options':  {
+					search_color_presets: [
+						'#597d1e',
+						'#d62f2f',
+						'#2f86d6',
+						'#b85c1a'
+					],
+
+					overlays: {
+						'Phytoregions': L.tileLayer.wms("http://gis.bebif.be:80/geoserver2/wms", {
+                			layers: 'bbpf:Regions_Phyto_Clipped',
+                			format: 'image/png',
+                			transparent: true 
+                		})
+					},
+
+					// TODO: Move to settings.py
+					cloudmade_api_key: "16534950d4b44d358c7963355dc57dc6",
+					cloudmade_style_id: 998, //1930,
+
+
+					initial_location: [50.6, 4.3],
+					initial_zoom: 8,
+					attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+					max_zoom: 18
+				}
 			};
 
-			var map_options = {
-				overlay_color_presets: [
-				'#597d1e',
-				'#d62f2f',
-				'#2f86d6',
-				'#b85c1a'
-				],
-
-			// TODO: Move to settings.py
-			cloudmade_api_key:"16534950d4b44d358c7963355dc57dc6",
-			cloudmade_style_id: 998, //1930,
-			initial_location: [50.6, 4.3],
-			initial_zoom: 8,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
-			max_zoom: 18
-		};
-
-		window._formidabel.atlas.bootstrap($('#ants_atlas'), map_options, app_options);
+		window._formidabel.atlas.bootstrap(app_options);
 		
 	});
-		</script>
+</script>
 
-		{% endaddtoblock %}
-		{% endblock %}	
+{% endaddtoblock %}
+{% endblock %}	
