Added Forest overlays.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -175,6 +175,27 @@
                 			layers: 'bbpf:Regions_Phyto_Clipped',
                 			format: 'image/png',
                 			transparent: true 
+                		}),
+                		'Broad-leaved forest': L.tileLayer.wms("http://gis.bebif.be:80/geoserver2/wms", {
+                			layers: 'eea:mergedandclipped',
+                			format: 'image/png',
+                			transparent: true,
+                			cql_filter: 'CODE_00=311',
+                			styles: 'CORINE_DISTINCT_FOREST'
+                		}),
+                		'Coniferous forest': L.tileLayer.wms("http://gis.bebif.be:80/geoserver2/wms", {
+                			layers: 'eea:mergedandclipped',
+                			format: 'image/png',
+                			transparent: true,
+                			cql_filter: 'CODE_00=312',
+                			styles: 'CORINE_DISTINCT_FOREST'
+                		}),
+                		'Mixed forest': L.tileLayer.wms("http://gis.bebif.be:80/geoserver2/wms", {
+                			layers: 'eea:mergedandclipped',
+                			format: 'image/png',
+                			transparent: true,
+                			cql_filter: 'CODE_00=313',
+                			styles: 'CORINE_DISTINCT_FOREST'
                 		})
 					},
 
