Added proper Formidabel link (in toolbar) to site root.

--- a/formidabel/formidabel/templates/base.html
+++ b/formidabel/formidabel/templates/base.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="navbar navbar-fixed-top navbar-inverse">
 			<div class="navbar-inner">
-				<a class="brand" href="#" style="margin-left: 0">Formidabel</a>
+				<a class="brand" href="{% page_url 'site_root' %}" style="margin-left: 0">Formidabel</a>
 				<ul class="nav">
 					{% show_menu 0 100 100 100 "menu.html" %}
 				</ul>	
