Bootstrap CSS customization.

--- a/formidabel/formidabel/templates/base.html
+++ b/formidabel/formidabel/templates/base.html
@@ -5,6 +5,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/formidabel.css" media="all" />
+	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	{% render_block "css" %}
 </head>
 <body>
