--- a/bootstrap-2.2.2/bootstrap/css/bootstrap-responsive.css
+++ b/bootstrap-2.2.2/bootstrap/css/bootstrap-responsive.css
@@ -995,9 +995,9 @@
   .nav-collapse .btn {
     padding: 4px 10px 4px;
     font-weight: normal;
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
   }
   .nav-collapse .dropdown-menu li + li a {
     margin-bottom: 2px;
