--- a/bootstrap-2.2.2/less/variables.less
+++ b/bootstrap-2.2.2/less/variables.less
@@ -7,6 +7,14 @@
 // --------------------------------------------------
 
 
+// Custom colors
+
+@c_red:         #951f2b;
+@c_beige:       #f5f4d7;
+@c_taupe:       #e0dfb1;
+@c_khaki:        #a5a36c;
+@c_avocado:     #535233;
+
 // Grays
 // -------------------------
 @black:                 #000;
@@ -32,13 +40,13 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @white;
-@textColor:             @grayDark;
+@bodyBackground:        @c_beige;
+@textColor:             @c_avocado;
 
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             @c_red;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -53,9 +61,9 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
+@headingsFontFamily:    'Oswald', sans-serif; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    bold;    // instead of browser default, bold
-@headingsColor:         inherit; // empty to use BS default, @textColor
+@headingsColor:         @c_red; // empty to use BS default, @textColor
 
 
 // Component sizing
@@ -70,9 +78,9 @@
 @paddingSmall:          2px 10px;  // 26px
 @paddingMini:           0 6px;   // 22px
 
-@baseBorderRadius:      4px;
-@borderRadiusLarge:     6px;
-@borderRadiusSmall:     3px;
+@baseBorderRadius:      0px;
+@borderRadiusLarge:     3px;
+@borderRadiusSmall:     0px;
 
 
 // Tables
@@ -162,7 +170,7 @@
 
 // Hr border color
 // -------------------------
-@hrBorder:                @grayLighter;
+@hrBorder:                @c_taupe;
 
 
 // Horizontal forms & lists
@@ -172,7 +180,7 @@
 
 // Wells
 // -------------------------
-@wellBackground:                  #f5f5f5;
+@wellBackground:                  @c_taupe;
 
 
 // Navbar
@@ -195,9 +203,9 @@
 @navbarBrandColor:                @navbarLinkColor;
 
 // Inverted navbar
-@navbarInverseBackground:                #111111;
-@navbarInverseBackgroundHighlight:       #222222;
-@navbarInverseBorder:                    #252525;
+@navbarInverseBackground:                #111;
+@navbarInverseBackgroundHighlight:       #222;
+@navbarInverseBorder:                    @c_avocado;
 
 @navbarInverseText:                      @grayLight;
 @navbarInverseLinkColor:                 @grayLight;
