--- a/bootstrap-2.2.2/less/variables.less
+++ b/bootstrap-2.2.2/less/variables.less
@@ -102,8 +102,8 @@
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
 
-@btnSuccessBackground:              #62c462;
-@btnSuccessBackgroundHighlight:     #51a351;
+@btnSuccessBackground:              @c_avocado; //#62c462;
+@btnSuccessBackgroundHighlight:     darken(@c_avocado, 15%); //#51a351;
 
 @btnWarningBackground:              lighten(@orange, 15%);
 @btnWarningBackgroundHighlight:     @orange;
