--- a/formidabel/static/css/bootstrap.css
+++ b/formidabel/static/css/bootstrap.css
@@ -3410,17 +3410,17 @@ input[type="button"].btn-block {
 .btn-success {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #5bb75b;
-  *background-color: #51a351;
-  background-image: -moz-linear-gradient(top, #62c462, #51a351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image: -o-linear-gradient(top, #62c462, #51a351);
-  background-image: linear-gradient(to bottom, #62c462, #51a351);
+  background-color: #403f27;
+  *background-color: #242316;
+  background-image: -moz-linear-gradient(top, #535233, #242316);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#535233), to(#242316));
+  background-image: -webkit-linear-gradient(top, #535233, #242316);
+  background-image: -o-linear-gradient(top, #535233, #242316);
+  background-image: linear-gradient(to bottom, #535233, #242316);
   background-repeat: repeat-x;
-  border-color: #51a351 #51a351 #387038;
+  border-color: #242316 #242316 #000000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff535233', endColorstr='#ff242316', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
@@ -3430,13 +3430,13 @@ input[type="button"].btn-block {
 .btn-success.disabled,
 .btn-success[disabled] {
   color: #ffffff;
-  background-color: #51a351;
-  *background-color: #499249;
+  background-color: #242316;
+  *background-color: #14140c;
 }
 
 .btn-success:active,
 .btn-success.active {
-  background-color: #408140 \9;
+  background-color: #040402 \9;
 }
 
 .btn-info {
@@ -3728,7 +3728,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .btn-group.open .btn-success.dropdown-toggle {
-  background-color: #51a351;
+  background-color: #242316;
 }
 
 .btn-group.open .btn-info.dropdown-toggle {
