--- a/formidabel/formidabel/templates/base.html
+++ b/formidabel/formidabel/templates/base.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		<div class="navbar navbar-fixed-top navbar-inverse">
 			<div class="navbar-inner">
-				<a class="brand" href="{% page_url 'site_root' %}" style="margin-left: 0">Formidabel</a>
+				<a class="brand" href="{% page_url 'site_root' %}" style="margin-left: 0">Formicidae-atlas</a>
 				<ul class="nav">
 					{% show_menu 0 100 100 100 "menu.html" %}
 				</ul>	
@@ -28,6 +28,7 @@
 				{% block base_content %}{% endblock %}
 			</div>
 		</div>
+		<hr/>
 	</div>		
 
 	<script src="{{ STATIC_URL }}js/jquery-1.9.1.min.js" type="text/javascript"></script>
